--- a/project.ipynb
+++ b/project.ipynb
@@ -36,7 +36,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\fevc_\\AppData\\Local\\Temp\\ipykernel_12800\\4098645343.py:1: DeprecationWarning: \n",
+      "C:\\Users\\fevc_\\AppData\\Local\\Temp\\ipykernel_128\\4098645343.py:1: DeprecationWarning: \n",
       "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
       "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
       "but was not found to be installed on your system.\n",
@@ -1312,7 +1312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 15,
    "id": "binary-input",
    "metadata": {},
    "outputs": [
@@ -1699,7 +1699,7 @@
        "[907 rows x 37 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1723,7 +1723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "id": "lyric-bunch",
    "metadata": {},
    "outputs": [
@@ -1771,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 17,
    "id": "random-feeling",
    "metadata": {},
    "outputs": [
@@ -1833,12 +1833,414 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
+   "id": "233b7e01",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>id_realEstates</th>\n",
+       "      <th>isNew</th>\n",
+       "      <th>realEstate_name</th>\n",
+       "      <th>phone_realEstate</th>\n",
+       "      <th>url_inmueble</th>\n",
+       "      <th>rooms</th>\n",
+       "      <th>bathrooms</th>\n",
+       "      <th>surface</th>\n",
+       "      <th>price</th>\n",
+       "      <th>...</th>\n",
+       "      <th>level4Id</th>\n",
+       "      <th>level5Id</th>\n",
+       "      <th>level6Id</th>\n",
+       "      <th>level7Id</th>\n",
+       "      <th>level8Id</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>zipCode</th>\n",
+       "      <th>customZone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>170</td>\n",
+       "      <td>153920011</td>\n",
+       "      <td>False</td>\n",
+       "      <td>grupo tizona</td>\n",
+       "      <td>911226046.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>195.0</td>\n",
+       "      <td>290000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,31111</td>\n",
+       "      <td>-3,73066</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>232</th>\n",
+       "      <td>233</td>\n",
+       "      <td>152842726</td>\n",
+       "      <td>False</td>\n",
+       "      <td>aljada inmobiliaria</td>\n",
+       "      <td>916355578.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/sa...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>137400</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,3060558</td>\n",
+       "      <td>-3,7346649</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>233</th>\n",
+       "      <td>234</td>\n",
+       "      <td>152842686</td>\n",
+       "      <td>False</td>\n",
+       "      <td>aljada inmobiliaria</td>\n",
+       "      <td>916355578.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/sa...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>83.0</td>\n",
+       "      <td>135500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,3035689</td>\n",
+       "      <td>-3,7381336</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>269</th>\n",
+       "      <td>270</td>\n",
+       "      <td>153861480</td>\n",
+       "      <td>False</td>\n",
+       "      <td>whan house consulting</td>\n",
+       "      <td>925630418.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/vi...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>99900</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,3068987</td>\n",
+       "      <td>-3,725108</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>381</th>\n",
+       "      <td>382</td>\n",
+       "      <td>153880899</td>\n",
+       "      <td>False</td>\n",
+       "      <td>grupo tizona</td>\n",
+       "      <td>911226046.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>280.0</td>\n",
+       "      <td>455000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,28327</td>\n",
+       "      <td>-3,74772</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14999</th>\n",
+       "      <td>15000</td>\n",
+       "      <td>150500515</td>\n",
+       "      <td>False</td>\n",
+       "      <td>identy</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>210.0</td>\n",
+       "      <td>365000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,30546</td>\n",
+       "      <td>-3,75275</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15002</th>\n",
+       "      <td>15003</td>\n",
+       "      <td>140064595</td>\n",
+       "      <td>False</td>\n",
+       "      <td>grupo gonzalez gervaso</td>\n",
+       "      <td>914871849.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ma...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>122.0</td>\n",
+       "      <td>284491</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40,30206</td>\n",
+       "      <td>-3,73321</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15034</th>\n",
+       "      <td>15035</td>\n",
+       "      <td>153433007</td>\n",
+       "      <td>False</td>\n",
+       "      <td>aurea homes</td>\n",
+       "      <td>911361016.0</td>\n",
+       "      <td>https://www.fotocasa.es/vivienda/getafe/calle-...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>447000</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40,31667</td>\n",
+       "      <td>-3,74072</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15087</th>\n",
+       "      <td>15088</td>\n",
+       "      <td>150177594</td>\n",
+       "      <td>False</td>\n",
+       "      <td>grupo gonzalez gervaso</td>\n",
+       "      <td>914871849.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ar...</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>115.0</td>\n",
+       "      <td>356160</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40,30186</td>\n",
+       "      <td>-3,73321</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15117</th>\n",
+       "      <td>15118</td>\n",
+       "      <td>153433030</td>\n",
+       "      <td>False</td>\n",
+       "      <td>aurea homes</td>\n",
+       "      <td>911361016.0</td>\n",
+       "      <td>https://www.fotocasa.es/es/comprar/vivienda/ta...</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>140.0</td>\n",
+       "      <td>412500</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>40,31667</td>\n",
+       "      <td>-3,74072</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>290 rows × 37 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       Unnamed: 0  id_realEstates  isNew         realEstate_name  \\\n",
+       "169           170       153920011  False            grupo tizona   \n",
+       "232           233       152842726  False     aljada inmobiliaria   \n",
+       "233           234       152842686  False     aljada inmobiliaria   \n",
+       "269           270       153861480  False   whan house consulting   \n",
+       "381           382       153880899  False            grupo tizona   \n",
+       "...           ...             ...    ...                     ...   \n",
+       "14999       15000       150500515  False                  identy   \n",
+       "15002       15003       140064595  False  grupo gonzalez gervaso   \n",
+       "15034       15035       153433007  False             aurea homes   \n",
+       "15087       15088       150177594  False  grupo gonzalez gervaso   \n",
+       "15117       15118       153433030  False             aurea homes   \n",
+       "\n",
+       "       phone_realEstate                                       url_inmueble  \\\n",
+       "169         911226046.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+       "232         916355578.0  https://www.fotocasa.es/es/comprar/vivienda/sa...   \n",
+       "233         916355578.0  https://www.fotocasa.es/es/comprar/vivienda/sa...   \n",
+       "269         925630418.0  https://www.fotocasa.es/es/comprar/vivienda/vi...   \n",
+       "381         911226046.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+       "...                 ...                                                ...   \n",
+       "14999               NaN  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+       "15002       914871849.0  https://www.fotocasa.es/es/comprar/vivienda/ma...   \n",
+       "15034       911361016.0  https://www.fotocasa.es/vivienda/getafe/calle-...   \n",
+       "15087       914871849.0  https://www.fotocasa.es/es/comprar/vivienda/ar...   \n",
+       "15117       911361016.0  https://www.fotocasa.es/es/comprar/vivienda/ta...   \n",
+       "\n",
+       "       rooms  bathrooms  surface   price  ... level4Id level5Id level6Id  \\\n",
+       "169      6.0        2.0    195.0  290000  ...        0        0        0   \n",
+       "232      3.0        1.0     65.0  137400  ...        0        0        0   \n",
+       "233      3.0        1.0     83.0  135500  ...        0        0        0   \n",
+       "269      3.0        1.0     62.0   99900  ...        0        0        0   \n",
+       "381      4.0        2.0    280.0  455000  ...        0        0        0   \n",
+       "...      ...        ...      ...     ...  ...      ...      ...      ...   \n",
+       "14999    3.0        3.0    210.0  365000  ...        0        0        0   \n",
+       "15002    3.0        2.0    122.0  284491  ...        0        0        0   \n",
+       "15034    4.0        2.0    137.0  447000  ...        0        0        0   \n",
+       "15087    3.0        2.0    115.0  356160  ...        0        0        0   \n",
+       "15117    4.0        2.0    140.0  412500  ...        0        0        0   \n",
+       "\n",
+       "      level7Id level8Id accuracy    latitude   longitude zipCode customZone  \n",
+       "169          0        0        0    40,31111    -3,73066     NaN        NaN  \n",
+       "232          0        0        0  40,3060558  -3,7346649     NaN        NaN  \n",
+       "233          0        0        0  40,3035689  -3,7381336     NaN        NaN  \n",
+       "269          0        0        0  40,3068987   -3,725108     NaN        NaN  \n",
+       "381          0        0        0    40,28327    -3,74772     NaN        NaN  \n",
+       "...        ...      ...      ...         ...         ...     ...        ...  \n",
+       "14999        0        0        0    40,30546    -3,75275     NaN        NaN  \n",
+       "15002        0        0        1    40,30206    -3,73321     NaN        NaN  \n",
+       "15034        0        0        1    40,31667    -3,74072     NaN        NaN  \n",
+       "15087        0        0        0    40,30186    -3,73321     NaN        NaN  \n",
+       "15117        0        0        1    40,31667    -3,74072     NaN        NaN  \n",
+       "\n",
+       "[290 rows x 37 columns]"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "houses_per_population = south_belt[south_belt['level5'] == 'Getafe']\n",
+    "houses_per_population"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
    "id": "fifteen-browse",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The most expensive house in Fuenlabrada, is located in Calle de Paulo Freire, 5, Fuenlabrada, and the price is 490000\n",
+      "The most expensive house in Alcorcón, is located in Alcorcón, and the price is 950000\n",
+      "The most expensive house in Leganés, is located in Avenida Reina Sofía, Leganés, and the price is 650000\n",
+      "The most expensive house in Getafe, is located in Getafe, and the price is 1050000\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO"
+    "# Most expensive house of each population\n",
+    "for population in populations:\n",
+    "    houses_per_population = south_belt[south_belt['level5'] == population]\n",
+    "    \n",
+    "    most_exp_house = houses_per_population.loc[houses_per_population['price'].idxmax()]\n",
+    "    print(f'The most expensive house in {population}, is located in {most_exp_house.address}, and the price is {round(most_exp_house.price, 2)}')"
    ]
   },
   {
@@ -1861,7 +2263,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# TODO"
+    "\n",
+    "# Prices normalized\n",
+    "ax, fig = plt.subplots(2, 2, f)"
    ]
   },
   {
